DevTools: fix nowrap style in the elements panel.
BUG=425976

Review URL: https://codereview.chromium.org/649633005

git-svn-id: svn://svn.chromium.org/blink/trunk@184196 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elements/elementsPanel.css
+++ b/front_end/elements/elementsPanel.css
@@ -34,6 +34,10 @@
     transform: translateZ(0);
 }
 
+#elements-content.elements-wrap {
+    overflow-x: hidden;
+}
+
 #elements-crumbs {
     flex: 0 0 19px;
     background-color: white;
