--- a/front_end/elements/elementsTreeOutline.css
+++ b/front_end/elements/elementsTreeOutline.css
@@ -261,3 +261,11 @@ body.inactive button.text-button, .text-button:disabled {
 .webkit-html-attribute-value a {
     cursor: default !important;
 }
+
+.nowrap {
+    white-space: pre !important;
+}
+
+.nowrap .outline-disclosure li {
+    word-wrap: normal;
+}
